# AoC2024

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
day1/: CMakeLists.txt
day1/include/: HistorianHistory.h
day1/src/: Day1Main.cpp  HistorianHistory.cpp
day1/test/: test_day1.cpp
day2/: CMakeLists.txt
day2/include/: RedNosedReports.h
day2/src/: Day2Main.cpp  RedNosedReports.cpp
day2/test/: test_day2.cpp
day3/: CMakeLists.txt
day3/include/: MullItOver.h
day3/resources/: Example.txt
day3/src/: Day3Main.cpp  MullItOver.cpp
day3/test/: test_day3.cpp
day4/: CMakeLists.txt
day4/include/: FindXmas.h
day4/src/: Day4Main.cpp  FindXmas.cpp
day4/test/: test_day4.cpp
day5/: CMakeLists.txt
day5/include/: PrintQueue.h
day5/src/: Day5Main.cpp  PrintQueue.cpp
day5/test/: test_day5.cpp
